FIxed some spacing control styling issues

--- a/src/components/typography/editor.lazy.scss
+++ b/src/components/typography/editor.lazy.scss
@@ -5,7 +5,7 @@
 }
 
 .components-button-group.components-tab-panel__tabs {
-	padding-right: 26px;
+	padding-right: 4px;
 }
 
 .components-button-group.uagb-size-type-field {
